--- a/css/desc.css
+++ b/css/desc.css
@@ -15,7 +15,7 @@ a:visited {text-decoration: none;color: #333;}
 
 
 
-body{font-family:'Noto Sans KR', sans-serif; font-size:20x; line-height:36px; color:#333;}
+body{font-family:'Noto Sans KR', sans-serif; font-size:20x; line-height:36px; color:#333; position: relative;}
 
 
 
@@ -63,7 +63,22 @@ body{font-family:'Noto Sans KR', sans-serif; font-size:20x; line-height:36px; co
 
 
 	
+/* bread 링크*/
+.bread { display:inline-block; color:#FFF; background: #dccbc2; border-radius: 80px; width:7.82vw; height:7.82vw;  font-size:1.5rem; text-align: center;position: absolute; top: 12%;left: 70%;}
+
+.bread a{display: block; padding-top: 2.56vw;padding-bottom: 2.56vw}
+.bread :hover{color:#fff;transition: 0.2s }
+
+
+
+@media all and (max-width:780px) {
 	
+
+.re_img{
+    width: 100%;}
+
+    .bread{position: absolute; top:680px; left: 800px; width: 10.82vw; height: 10.82vw;font-size:1.5rem;}}
+    
 
 
 /* 스타미피부과-링크 */
@@ -87,11 +102,72 @@ body{font-family:'Noto Sans KR', sans-serif; font-size:20x; line-height:36px; co
 /*로고디자인*/
 
 .concept{}
-.concept_inner{position:relative; top:950px;}
-.concept_inner li{float: left; width: calc(100%/3); height: 50px; text-align: center; display: inline-block; background: #684a07;}
+.concept_inner{position:absolute; top:12%; left: 0px;}
+.concept_inner li{float: left; width: calc(100/3); height: 50px; text-align: center; display:block; background: #684a07;width: 420px;box-sizing: border-box;margin: auto;}
 .concept_inner li a{color: white;}
 .concept_inner li:hover{background:#fff;transition: 0.3s;}
 .concept_inner li:hover a{color:#684a07; transition: 0.3s; display: block;}
+
+
+
+/*uxui 버튼*/
+.uiux-concept{position: relative;}
+.uiux-concept_inner li {background: orange;width: 300px; height: 50px;text-align: center;padding: 10px;}
+.uiux-concept_inner li:nth-child(1){position: absolute; top:193px; left:132px;}
+.uiux-concept_inner li:hover{background: #fff; transition: 0.3s;}
+.uiux-concept_inner li:hover a{color: orange;transform:scaleY(1.2); transition: 0.3s;}
+.uiux-concept_inner li a{display: block;text-align: center;padding: 5px;}
+
+
+.uiux-concept_inner li:nth-child(2){position: absolute; top:193px; left:432px;}
+
+
+#cheese{display: flex;}
+@keyframes slide2 {
+
+    from{
+        margin-left:-250px;
+    }
+    50%{
+        font-size: 40px;
+    }
+    to{
+        margin-left:240px;
+    }
+    
+}
+@keyframes slide{
+
+    from{
+        margin-left:-250px;
+    }
+    50%{
+        font-size: 40px;
+    }
+    to{
+        margin-left:270px;
+    }
+    
+}
+
+.cheese{
+    font-size: 30px;
+    animation-name: slide2;
+    animation-duration: 2s;
+    animation-fill-mode: forwards;
+   z-index: 999px;
+}
+.cheese2{
+    font-size: 30px;
+    animation-name: slide;
+    animation-duration: 2s;
+    animation-fill-mode: forwards;
+   z-index: 999px;
+   
+}
+
+
+
 
 
 
@@ -131,23 +207,31 @@ body{font-family:'Noto Sans KR', sans-serif; font-size:20x; line-height:36px; co
 	color: #242223;
 }
 
+
+
+
+
+/*청구수산 버튼*/
 .starmi_link_btn {width: 100px; height: 100px;  text-align: center; padding-top: 30px; box-sizing: border-box;font-size: 20px; margin-left: 4%;}
 .starmi_link_btn:hover{background: #495dc0;transition: 1s;}
 .starmi_link_btn:hover a{color: white; transition: 1s;}
 .starmi_link_btn a{display:block;height: 100%;}
 
 
-.susan_link_btn{width: 100px; height: 100px;  text-align: center; padding-top: 30px; box-sizing: border-box;font-size: 20px; border-radius: 30%;}
-.susan_link_btn:hover{background: #110b43;transition: 1s;}
-.susan_link_btn:hover a{color: white; transition: 1s;}
-.susan_link_btn a{display:block;height: 100%;}
+.susan_link_btn{background: #110b43; position: absolute; top: 0.5%; width: 100px; height: 100px;  text-align: center; padding-top: 30px; box-sizing: border-box;font-size: 20px; border-radius: 30%; }
+.susan_link_btn:hover{background: #ccc;transition: 0.5s;}
+.susan_link_btn:hover a{color: black; transition: 0.5s;}
+.susan_link_btn a{display:block;height: 100%;color: white;}
+.susan_link_btn span{font-size: 15px; margin-top: -10px; display: block;}
 
 
+.starmi_link_btn2 {background: #110b43; position: absolute; top: 0.5%;width: 100px; height: 100px; text-align: center; padding-top: 15px; box-sizing: border-box;font-size: 20px; border-radius: 30%;}
+.starmi_link_btn2:hover{background: #ccc;transition: 0.5s;}
+.starmi_link_btn2:hover a{color: black; transition: 0.5s;}
+.starmi_link_btn2 a{display:block;height: 100%;color: white;}
 
-.starmi_link_btn2 {width: 100px; height: 100px; text-align: center; padding-top: 15px; box-sizing: border-box;font-size: 20px; border-radius: 30%;}
-.starmi_link_btn2:hover{background: #110b43;transition: 1s;}
-.starmi_link_btn2:hover a{color: white; transition: 1s;}
-.starmi_link_btn2 a{display:block;height: 100%;}
+.susanlogo{position: absolute; top: 0.5%;left: 50%;transform: translateX(-20px)}
+
 
 
 /* //뒤로가기 버튼*/
@@ -157,14 +241,8 @@ body{font-family:'Noto Sans KR', sans-serif; font-size:20x; line-height:36px; co
 
 
 
-@media all and (max-width:780px) {
-	
 
-.re_img{
-	width: 100%;
-}
-
-	
+    
 	
     
 	
