--- a/css/style.css
+++ b/css/style.css
@@ -3367,7 +3367,8 @@ input[type="button"].btn-block {
   display: block;
   padding: 0.5rem 1rem; }
   .nav-link:hover, .nav-link:focus {
-    text-decoration: none; }
+    text-decoration: none;
+color: black;}
   .nav-link.disabled {
     color: #6c757d;
     pointer-events: none;
@@ -8473,16 +8474,17 @@ h1, h2, h3, h4, h5,
   position: relative;
   text-align: center;
   margin: 0 auto;
-  display: block; }
+  display: block; 
+}
   .mouse-icon:after {
     position: absolute;
-    top: 0;
+    top: 1;
     left: 0;
     right: 0;
     bottom: 0;
     content: '';
     background: #edf0ff;
-    z-index: -1;
+    z-index: -9999;
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg); }
